@@ -1,3 +1,7 @@
+2009-02-18  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug #10452: Evaluation PATH_INFO in tslib_fe::checkAlternativeIdMethods() sets false positives and should be moved to tx_simulatestatic
+
 2009-02-17  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Follow-up for feature #10374: Add helper function for additional frontend editing controllers and views
